<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textColor="#000"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/editUsername"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="5dp"
                android:textColor="#000"
                android:textSize="14sp"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textViewPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/password"
                android:textColor="#000"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/editPassword"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="5dp"
                android:inputType="textPassword"
                android:textColor="#000"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/email"
                android:textColor="#000"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/editEmail"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="5dp"
                android:inputType="textEmailAddress"
                android:textColor="#000"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/nama_lengkap"
                android:textColor="#000"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/editNamaLengkap"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="5dp"
                android:textColor="#000"
                android:textSize="14sp"
                android:inputType="textPersonName" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/asal_sekolah"
                android:textColor="#000"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/editAsalSekolah"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="5dp"
                android:textColor="#000"
                android:textSize="14sp"
                android:inputType="text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/alamat_tinggal"
                android:textColor="#000"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/editAlamat"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="5dp"
                android:textColor="#000"
                android:textSize="14sp"
                android:inputType="text" />

            <Button
                android:id="@+id/btnSimpan"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="40dp"
                android:background="@color/design_default_color_on_primary"
                android:text="@string/simpan"
                android:textColor="#FFF"
                android:textSize="14sp" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>